# tauri-test

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js
public/: global.css  proxies.html  splashscreen.html  tokens.html
src-svelte/: App.svelte  functions.js
src-svelte/components/: Navbar.svelte  Switch.svelte
src-svelte/pages/: Chatlist.svelte  Settings.svelte
src-tauri/: Cargo.toml  build.rs  config.json  proxies.txt  tauri.conf.json  tokens.txt
src-tauri/src/: commands.rs  main.rs  preloader.rs  ui.rs
