[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3", features = [] }

[dependencies]
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
reqwest = { version = "*", features = ["rustls-tls", "json"] } 
serde = { version = "*", features = ["derive"]}
serde_json = "*"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
